--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -22,6 +22,10 @@ z-index: 100;
                 font-size: 1.6rem;
                 cursor: pointer;
                 margin-left: 42px;
+                @media screen and (max-width:650px) {
+                    font-size: 1.3rem;
+                    margin-left: 22px;
+                }
             }
             img{
                 width: 25px;
@@ -29,6 +33,11 @@ z-index: 100;
                 border-radius: 100%;
                 object-fit: cover;
                 margin-left: 42px;
+                @media screen and (max-width:650px) {
+                    width: 19px;
+                    height: 19px;
+                    margin-left: 22px;
+                }
             }
         }
     }
